--- a/Drag&Drop.html
+++ b/Drag&Drop.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Drag and Drop</title>
     <style>
         .container {
             border: 2px solid black;
